--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
+    <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="stylesheet" href="CSS/normalize.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
