--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <picture>
 
                         <source media="(max-width: 600px)"
-                            srcset="http://127.0.0.1:5500/img/%E8%B3%87%E7%94%A2%206.svg" />
+                            srcset="http://127.0.0.1:5500/img/logo_header_small.svg" />
 
-                        <img src="img/資產 4.svg" alt="kaidi_logo" style="width:auto;">
+                        <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
                         
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
@@ -134,7 +134,7 @@
 
     <footer>
         <div class="footer_group">
-            <div class="footer_logo"><img src="./img/資產 1.svg" alt="kaidi_logo"></div>
+            <div class="footer_logo"><img src="./img/logo_footer.svg" alt="kaidi_logo"></div>
             <div class="footer_item">
                 <a href="#">
                     <p>首頁</p>
