--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <picture>
 
                         <source media="(max-width: 600px)"
-                            srcset="http://127.0.0.1:5500/img/logo_header_small.svg" />
+                            srcset="https://www.kaidi-tech.com/img/logo_header_small.svg" />
 
                         <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
                         
