--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
+    <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="stylesheet" href="CSS/normalize.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -40,9 +40,9 @@
                     <picture>
 
                         <source media="(max-width: 600px)"
-                            srcset="http://127.0.0.1:5500/img/%E8%B3%87%E7%94%A2%206.svg" />
+                            srcset="https://kaidi-tech.com/img/logo_header_small.svg" />
 
-                        <img src="img/資產 4.svg" alt="kaidi_logo" style="width:auto;">
+                        <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
                         
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
@@ -134,9 +134,9 @@
 
     <footer>
         <div class="footer_group">
-            <div class="footer_logo"><img src="./img/資產 1.svg" alt="kaidi_logo"></div>
+            <div class="footer_logo"><img src="./img/logo_footer.svg" alt="kaidi_logo"></div>
             <div class="footer_item">
-                <a href="./index.html">
+                <a href="#">
                     <p>首頁</p>
                 </a>
                 <a href="#">
