--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
+    <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
