--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                 </div>
 
 
-                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_工作區域 1.png" alt="&Xi"></div>
+                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" alt="&Xi"></div>
 
             </div>
 
