--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
                     <picture>
 
                         <source media="(max-width: 600px)"
-                            srcset="https://kaidi-tech.com/img/logo_header_small.svg" />
+                            srcset="https://kaidi-tech.com/img/logo_header_small" width="181px" height="150px" />
 
                         <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
                         
@@ -78,12 +78,12 @@
                 <div class="header_community ">
 
                     <div class="community_icon"><a href="https://www.facebook.com/">
-                            <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
+                            <img src="./img/facebook_icon.svg "  alt="facebook_img"> </a>
                     </div>
 
                     <a href="https://www.instagram.com/">
                         <div class="community_icon">
-                            <img src="./img/instagram_icon.svg" alt="instagram_img">
+                            <img src="./img/instagram_icon.svg"  alt="instagram_img">
                         </div>
                     </a>
                     <div class="language">中文/English</div>
@@ -92,7 +92,7 @@
                 </div>
 
 
-                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" alt="&Xi"></div>
+                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" width="150px" height="150px" alt="&Xi"></div>
 
             </div>
 
