--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
                     <picture>
 
                         <source media="(max-width: 600px)"
-                            srcset="https://kaidi-tech.com/img/logo_header_small" width="181px" height="150px" />
+                            srcset="https://kaidi-tech.com/img/logo_header_small.svg" width="181px" height="150px" />
 
                         <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
                         
