--- a/product.html
+++ b/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,8 @@
     <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
+
+   
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
