--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,9 @@
     <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
+
+    <meta property="og:title" content="愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd"/>
+    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
