--- a/about.html
+++ b/about.html
@@ -8,8 +8,15 @@
     <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
+    <!-- SEO -->
 
-    
+    <meta property="og:title" content="愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd" />
+    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村">
+    <meta property="og:url" content="https://www.kaidi-tech.com/">
+    <meta name="description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村">
+
+    <!-- SEO -->
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -41,11 +48,11 @@
                     <!-- <img src="img/資產 4.svg" srcset="img/資產 4.svg 500w, img/資產 6.svg 1000w" /> -->
                     <picture>
 
-                        <source media="(max-width: 600px)"
-                            srcset="https://kaidi-tech.com/img/logo_header_small.svg" width="181px" height="150px" />
+                        <source media="(max-width: 600px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
+                            width="181px" height="150px" />
 
                         <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
-                        
+
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
                 </a></div>
@@ -79,12 +86,12 @@
                 <div class="header_community ">
 
                     <div class="community_icon"><a href="https://www.facebook.com/">
-                            <img src="./img/facebook_icon.svg "  alt="facebook_img"> </a>
+                            <img src="./img/facebook_icon.svg " alt="facebook_img"> </a>
                     </div>
 
                     <a href="https://www.instagram.com/">
                         <div class="community_icon">
-                            <img src="./img/instagram_icon.svg"  alt="instagram_img">
+                            <img src="./img/instagram_icon.svg" alt="instagram_img">
                         </div>
                     </a>
                     <div class="language">中文/English</div>
@@ -93,7 +100,8 @@
                 </div>
 
 
-                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" width="150px" height="150px" alt="&Xi"></div>
+                <div class="nav_rwd" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" width="150px" height="150px"
+                        alt="&Xi"></div>
 
             </div>
 
@@ -127,8 +135,23 @@
 
             </div>
         </div>
-        <div style="width: 100vw;height: 100vh;">
-            <div style="height: 500px;width: 100px;;background-color: gray; "></div>
+
+        <div style="width: 100vw;height: 100vh;display: flex;align-items:center;justify-content:center ">
+            <div style="text-align: center;">
+                <h3>愷迪研發科技有限公司</h3>
+                <h4>
+                    Kai Di R&D Technology Co., Ltd
+                </h4><br>
+                <p>地址:新北市三重區仁愛街315巷72號(1樓)<br>
+                    電話:02-22860850
+
+
+
+                </p>
+            </div>
+
+
+
 
         </div>
 
