--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,19 @@
     <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
     <!-- SEO -->
+    <meta name="robots" content="index,follow,all"/>
+    <meta name="author" content="愷迪研發科技股份有限公司"/>
+    <meta name="description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村"/>
+    <meta name="keywords" content="愷迪研發科技股份有限公司,愷迪研發,愷迪研發科技,愷迪,Kai Di"/>
+    <meta name="copyright" content="本網站著作權為 愷迪研發科技股份有限公司 所有"/>
+
 
     <meta property="og:title" content="愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd" />
-    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村">
+    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村"/>
+    <meta property="og:type" content="article"/>
     <meta property="og:url" content="https://www.kaidi-tech.com/">
-    <meta name="description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村">
+    <meta property="og:img" content=" "/>
+   
 
     <!-- SEO -->
 
