--- a/contact.html
+++ b/contact.html
@@ -12,16 +12,15 @@
     <meta name="robots" content="index,follow,all" />
     <meta name="author" content="愷迪研發科技股份有限公司" />
     <meta name="description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
-    <meta name="keywords" content="愷迪研發科技股份有限公司,愷迪研發,愷迪研發科技,愷迪,KaiDi,kaidi,kaidi-tech" />
+    <meta name="keywords" content="愷迪研發科技股份有限公司,愷迪研發,愷迪研發科技,愷迪,KaiDi,kaidi,kaidi-tech,研發科技,研發,科技" />
     <meta name="copyright" content="本網站著作權為 愷迪研發科技股份有限公司 所有" />
 
 
     <meta property="og:title" content="愷迪研發科技股份有限公司 | Kai Di R&D Technology Co., Ltd" />
-    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村" />
+    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.kaidi-tech.com/">
     <meta property="og:img" content=" " />
-   
 
     <!-- SEO -->
 
