--- a/contact.html
+++ b/contact.html
@@ -145,12 +145,15 @@
 
         <div style="width: 100vw;height: 100vh;display: flex;align-items:center;justify-content:center ">
             <div style="text-align: center;">
-                <h3>愷迪研發科技有限公司</h3>
+                <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.6368806046985!2d121.4942576052819!3d25.08029373723962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a92a2b57f3a3%3A0x54eac6b49cb462a!2zMjQx5paw5YyX5biC5LiJ6YeN5Y2A5LuB5oSb6KGXMzE15be3NzLomZ8!5e0!3m2!1szh-TW!2stw!4v1618883145546!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <h3 style="margin:  20px 0 0 0;">愷迪研發科技有限公司</h3>
                 <h4>
                     Kai Di R&D Technology Co., Ltd
                 </h4><br>
                 <p>地址:新北市三重區仁愛街315巷72號(1樓)<br>
-                    電話:02-22860850
+                    電話:02-22860850<br>
+                    E-mail:kdrad2017@hotmail.com<br>
+                    統編:50888679
 
 
 
