--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,9 @@
                 <p>地址:新北市三重區仁愛街315巷72號(1樓)<br>
                     電話:02-22860850<br>
                     E-mail:kdrad2017@hotmail.com<br>
-                    統編:50888679
+                    統編:50888679<br>
+                    公車:搭乘橘18經福隆路「仁愛街」站下車、F302「愛街315巷口」站下車。
+
 
 
 
