--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
 
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
-                </a></div>
-            <div style="display: flex;flex-direction: column;margin: 0 20px;">
+                </a>
+            </div>
+
+            <div class="burger_group">
                 <div class="language">
                     <p>中文/English</p>
                 </div>
+
                 <div class="header_group_right">
-                    <ul class="head_item ">
+                    <ul>
                         <li><a href="./index.html">
                                 <h6>首頁</h6>
                                 <p>HOME</p>
@@ -95,18 +98,18 @@
                     </ul>
 
                     <div class="header_community ">
-
-                        <div class="community_icon"><a href="https://www.facebook.com/">
-                                <img src="./img/facebook_icon.svg " alt="facebook_img"> </a>
-                        </div>
-
+                        <a href="https://www.facebook.com/">
+                            <div class="community_icon">
+                                <img src="./img/facebook_icon.svg " alt="facebook_img">
+                            </div>
+                        </a>
                         <a href="https://www.instagram.com/">
                             <div class="community_icon">
                                 <img src="./img/instagram_icon.svg" alt="instagram_img">
                             </div>
                         </a>
 
-                      
+
 
 
                     </div>
@@ -155,27 +158,9 @@
             </div>
         </div>
 
-        <!-- <ul id="nav_none">
-            <li><a href="./index.html">
-                    <h6>首頁</h6>
-                </a>
-            </li>
-            <li><a href="./about.html">
-                    <h6>關於愷迪</h6>
-                </a>
 
-            </li>
-            <li><a href="./product.html">
-                    <h6>產品</h6>
-                </a>
-            </li>
-            <li><a href="./contact.html">
-                    <h6>聯絡我們</h6>
-                </a>
-            </li>
-        </ul> -->
 
-        <div style="width: 100vw;height: 100vh;display: flex;align-items:center;justify-content:center ">
+        <div style="height: 100vh;display: flex;align-items:center;justify-content:center ">
             <div>
 
                 <img width="100px" height="100px" style="margin: 0 0 20px 0;" src="./img/construction.svg"><br>
@@ -194,9 +179,13 @@
 
     <footer>
         <div class="footer_group">
-            <div class="footer_logo"><img src="./img/logo_footer.svg" alt="kaidi_logo"></div>
+            <div class="footer_logo">
+                <img src="./img/logo_footer.svg" alt="kaidi_logo">
+            </div>
+
             <div class="footer_item">
-                <a href="#">
+
+                <!-- <a href="#">
                     <p>首頁</p>
                 </a>
                 <a href="#">
@@ -207,8 +196,34 @@
                 </a>
                 <a href="#">
                     <p>網站地圖</p>
-                </a>
+                </a> -->
+                <ul>
+                    <li>
+                        <a href="#">
+                            <p>首頁</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>隱私權政策</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>免責聲明</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>網站地圖</p>
+                        </a>
+                    </li>
+
+
+
+                </ul>
             </div>
+
 
             <div class="footer_community">
                 <p>我們的社群網站</p>
@@ -237,6 +252,7 @@
         </div>
 
     </footer>
+    <!-- <div style="background-color: green;height: 100px;"></div> -->
 
 
 
