--- a/about.html
+++ b/about.html
@@ -67,7 +67,11 @@
 
             <div class="burger_group">
                 <div class="language">
-                    <p>中文/English</p>
+                    <p>
+                        <a href="#">中文</a>/
+                        <a href="#">English</a>
+
+                    </p>
                 </div>
 
                 <div class="header_group_right">
