--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                     <div >
                         <a href="https://www.facebook.com/">
-                            <div class="community_icon">
+                            <div>
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
                             </div>
                         </a>
