--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </li>
                     </ul>
 
-                    <div >
+                    <div class="header_community"  >
                         <a href="https://www.facebook.com/">
                             <div>
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
